--- a/src/components/film/film.css
+++ b/src/components/film/film.css
@@ -7,6 +7,11 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.film-clip {
+  clip-path: inset(-100vw -100vw -100vw 0);
+}
+
 .card {
   filter: invert(1);
   transition: filter 0.4s ease;
